<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/llName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/tv_modify_contact_name_text" />

        <EditText
            android:id="@+id/et_modify_contact_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:hint="@string/et_modify_contact_name_hint" 
            android:singleLine="true"
            android:imeOptions="actionNext"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llClass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llName"
        android:layout_margin="5dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/tv_modify_contact_class_text" />

        <Spinner
            android:id="@+id/sp_modify_contact_class"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llClass"
        android:layout_margin="5dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/tv_modify_contact_phone_text" />

        <EditText
            android:id="@+id/et_modify_contact_phone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:hint="@string/et_modify_contact_phone_hint"
            android:inputType="phone"
            android:singleLine="true"
            android:imeOptions="actionNext"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llPhone"
        android:layout_margin="5dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/tv_modify_contact_email_text" />

        <EditText
            android:id="@+id/et_modify_contact_email"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:inputType="textEmailAddress"
            android:hint="@string/et_modify_contact_email_hint" 
            android:singleLine="true"
            android:imeOptions="actionNext"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLiving"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llEmail"
        android:layout_margin="5dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/tv_modify_contact_living_text" />

        <EditText
            android:id="@+id/et_modify_contact_living"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:hint="@string/et_modify_contact_living_hint" 
            android:singleLine="true"
            android:imeOptions="actionNext"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llCompany"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llLiving"
        android:layout_margin="5dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/tv_modify_contact_company_text" />

        <EditText
            android:id="@+id/et_modify_contact_company"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:hint="@string/et_modify_contact_company_hint" 
            android:singleLine="true"
            android:imeOptions="actionNext"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llRemark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llCompany"
        android:layout_margin="5dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/tv_modify_contact_remark_text" />

        <EditText
            android:id="@+id/et_modify_contact_remark"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" 
            android:singleLine="true"
            android:imeOptions="actionDone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llOperate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_modify_contact_submit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/btn_modify_contact_submit_text" />

        <Button
            android:id="@+id/btn_modify_contact_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/btn_modify_contact_cancel_text" />
    </LinearLayout>

</RelativeLayout>