<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:id="@+id/llAddName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/tv_modify_contact_name_text" />

                <EditText
                    android:id="@+id/et_add_contact_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:hint="@string/et_modify_contact_name_hint"
                    android:imeOptions="actionNext"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llAddClass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llAddName"
                android:layout_margin="5dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/tv_modify_contact_class_text" />

                <Spinner
                    android:id="@+id/sp_add_contact_class"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="2"
                    android:gravity="center_vertical" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llAddPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llAddClass"
                android:layout_margin="5dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/tv_modify_contact_phone_text" />

                <EditText
                    android:id="@+id/et_add_contact_phone"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:hint="@string/et_modify_contact_phone_hint"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llAddEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llAddPhone"
                android:layout_margin="5dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/tv_modify_contact_email_text" />

                <EditText
                    android:id="@+id/et_add_contact_email"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:hint="@string/et_modify_contact_email_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llAddLiving"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llAddEmail"
                android:layout_margin="5dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/tv_modify_contact_living_text" />

                <EditText
                    android:id="@+id/et_add_contact_living"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:hint="@string/et_modify_contact_living_hint"
                    android:imeOptions="actionNext"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llAddCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llAddLiving"
                android:layout_margin="5dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/tv_modify_contact_company_text" />

                <EditText
                    android:id="@+id/et_add_contact_company"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:hint="@string/et_modify_contact_company_hint"
                    android:imeOptions="actionNext"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llAddRemark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llAddCompany"
                android:layout_margin="5dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/tv_modify_contact_remark_text" />

                <EditText
                    android:id="@+id/et_add_contact_remark"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:imeOptions="actionDone"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llAddOperate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llAddRemark"
                android:layout_margin="5dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_add_contact_submit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/btn_modify_contact_submit_text" />

                <Button
                    android:id="@+id/btn_add_contact_cancel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/btn_modify_contact_cancel_text" />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

</ScrollView>