<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/img_about_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/tv_about_info"
        android:layout_marginBottom="5dp"
        android:src="@drawable/ic_logo" />

    <TextView
        android:id="@+id/tv_about_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_about_version"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:text="@string/tv_about_info"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_about_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/tv_about_version"
        android:textColor="#aaa" />

    <Button
        android:id="@+id/btn_about_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_about_version"
        android:layout_margin="10dp"
        android:text="@string/btn_about_update" />

</RelativeLayout>